force-app/main/default/objects/RouteQuotesRelated__c/RouteQuotesRelated__c.object-meta.xml
<CustomObject>
    <label>Route Quotes Related</label>
    <nameField>
        <label>Route Quote</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Quotes Related</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>