force-app/main/default/objects/RouteQuotesRelated__c/fields/Budget_pcs__c.field-meta.xml
<CustomField>
    <fullName>Budget_pcs__c</fullName>
    <label>Budget (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>