force-app/main/default/objects/RouteQuotesRelated__c/fields/Budget_t__c.field-meta.xml
<CustomField>
    <fullName>Budget_t__c</fullName>
    <label>Budget (t)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>