force-app/main/default/objects/RouteQuotesRelated__c/fields/BusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinessDivision__c</fullName>
    <formula>IF(ISPICKVAL(MarketSegment__c, &apos;00006&apos;), &apos;Railway&apos;, &apos;Pipes&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Division</label>
    <type>Text</type>
</CustomField>