force-app/main/default/objects/RouteQuotesRelated__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>