force-app/main/default/objects/RouteQuotesRelated__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Route Quotes Related</relationshipLabel>
    <relationshipName>Route_Quotes_Related</relationshipName>
    <type>Lookup</type>
</CustomField>