force-app/main/default/objects/RouteQuotesRelated__c/fields/Route_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Quote_Name__c</fullName>
    <label>Route Quote Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>