force-app/main/default/objects/RouteQuotesRelated__c/fields/RouteQuote__c.field-meta.xml
<CustomField>
    <fullName>RouteQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotes Budget All</label>
    <referenceTo>Route_Quota__c</referenceTo>
    <relationshipLabel>Route Quotes Related</relationshipLabel>
    <relationshipName>Route_Quotes_Related</relationshipName>
    <type>Lookup</type>
</CustomField>