force-app/main/default/objects/RouteQuotesRelated__c/fields/RoutesQuotesH__c.field-meta.xml
<CustomField>
    <fullName>RoutesQuotesH__c</fullName>
    <label>Route Quotes Hierarchy</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipLabel>Route Quotes Related</relationshipLabel>
    <relationshipName>Route_Quotas_Related</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>