force-app/main/default/objects/RouteQuotesRelated__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Route Quotes Related</relationshipLabel>
    <relationshipName>Route_Quotes_Related</relationshipName>
    <type>Lookup</type>
</CustomField>